--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,20 @@
 /*  your css code here. If applicable */
+span{
+	background-color:green;
+	width:150px;
+	height:150px;
+	font:4vw;
+}
+
+.grid{
+	display:grid;
+	gap:4px;
+	color:white;
+	grid-template-areas:
+		"one one one one"
+	"two three four four"
+	"two five five six"
+	"two seven eight nine"
+	"two ten ten ten"
+	grid-template-columns: 1fr auto;
+}
