--- a/styles.css
+++ b/styles.css
@@ -4,3 +4,10 @@ body {
       padding: 0;
     }
 
+.grid-container {
+      display: grid;
+      grid-template-rows: repeat(5, 1fr);
+      grid-template-columns: repeat(4, 1fr);
+      gap: 5px;
+      height: 100vh;
+    }
