--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,44 @@
 /*  your css code here. If applicable */
-body {
+ body {
       margin: 0;
       padding: 0;
     }
 
-.grid-container {
+    .grid-container {
       display: grid;
-      grid-template-rows: repeat(5, 1fr);
       grid-template-columns: repeat(4, 1fr);
+      grid-template-rows: repeat(5, 1fr);
       gap: 5px;
       height: 100vh;
+      width: 100vw;
     }
 
- .grid-item {
+    .grid-item {
       background-color: #444;
       color: white;
       font-size: 4vw;
       display: flex;
-      justify-content: center;
       align-items: center;
+      justify-content: center;
     }
 
-    .green {
-      background-color: green;
-    }
-
+    /* Custom styles for specific items */
     .item1 {
       grid-column: 1 / span 4;
+      background-color: green;
     }
 
     .item2 {
       grid-row: 2 / span 4;
+      background-color: green;
     }
 
-    .item4 {
+    .item4, .item5 {
       grid-column: span 2;
-    }
-
-    .item5 {
-      grid-column: span 2;
+      background-color: green;
     }
 
     .item10 {
       grid-column: span 3;
+      background-color: green;
     }
