--- a/styles.css
+++ b/styles.css
@@ -33,10 +33,14 @@
       grid-row: 2 / span 4;
     }
 
-    .item4, .item5 {
-      grid-column: span 2;
-    }
+    .item4 {
+  grid-column: 1 / span 2;
+}
 
-    .item10 {
-      grid-column: span 3;
-    }
+.item5 {
+  grid-column: 3 / span 2;
+}
+
+.item10 {
+  grid-column: 1 / span 3;
+}
